fix overflow bug on safari small screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,27 +95,49 @@ a {
 /*carousel*/
 
 .wrapper {
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  height: 80%;
 }
+
 .scene {
-  width: 200px;
-  height: -300px;
-  perspective: 500px;
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  perspective: 1000px;
+  overflow-x: hidden;
 }
 .scene .carousel.keen-slider {
-  width: -50%;
-  height: 50%;
+  width: 600px;
+  height: 100px;
   position: relative;
   overflow: visible;
   transform: translateZ(10px);
   transform-style: preserve-3d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .carousel__cell {
   position: absolute;
   text-align: center;
 }
+
+.carousel__cell svg {
+  width: 50%;
+  height: 50%;
+}
+
+/* @media screen and (max-width: 638px) {
+  .carousel__cell svg {
+    width: 50%;
+    height: 50%;
+  }
+} */
+
 .keen-slider__slide {
   text-align: center;
 }
